<resources>
    <string name="app_name">Final project</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio???</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Настройка</string>

    <string name="hint_password" translatable="false">Құпия сөз</string>
    <string name="hint_email" translatable="false">Пошта</string>

    <string name="btn_login" translatable="false">Логин</string>
    <string name="btn_registration" translatable="false">Регистрация</string>

    <string name="menu_ata">Ata</string>
    <string name="menu_apa">Apa</string>
    <string name="menu_ake">Ake</string>
    <string name="menu_ana">Ana</string>
    <string name="menu_user">Jeke Kabinet</string>

</resources>