<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_user">

    <fragment
        android:id="@+id/nav_home"
        android:name="kz.example.finalproject.ui.home.HomeFragment"
        android:label="@string/menu_ata"
        tools:layout="@layout/fragment_ata" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="kz.example.finalproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_apa"
        tools:layout="@layout/fragment_apa" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="kz.example.finalproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_ake"
        tools:layout="@layout/fragment_ake" />
    <fragment
        android:id="@+id/nav_ana"
        android:name="kz.example.finalproject.ui.ana.AnaFragment"
        android:label="@string/menu_ana"
        tools:layout="@layout/fragment_ana" />


    <fragment
        android:id="@+id/nav_user"
        android:name="kz.example.finalproject.ui.user.userfragment"
        android:label="@string/menu_user"
        tools:layout="@layout/user_fragment" />
</navigation>