<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/family"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">



        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="15dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_email"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="15dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/vilet"
            android:text="@string/btn_login"
            android:textSize="20dp" />

        <Button
            android:id="@+id/registrationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginBtn"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/vilet"
            android:text="@string/btn_registration"
            android:textColor="@color/white"
            android:textSize="20dp" />


    </RelativeLayout>

</RelativeLayout>